--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,21 @@ p {
   flex-direction: column;
 }
 
+.header {
+  padding: 20px;
+  margin: 30px 0px 30px 0px;
+}
+
+.logo {
+  width: 100%;
+}
+
+.sub-heading {
+  border-top: 2px solid;
+  text-align: center;
+  font-size: 18px;
+}
+
 .uppdrag {
   height: 500px;
   padding: 20px;
