--- a/src/index.css
+++ b/src/index.css
@@ -179,10 +179,6 @@ a:hover {
 
 /* ACCORDION */
 
-.accordion-wrapper {
-  
-}
-
 .accordion-item {
   overflow: hidden;
   transition: max-height 0.3s cubic-bezier(1, 0, 1, 0);
@@ -205,28 +201,20 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
 
-  &::after {
-    content: "";
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid currentColor;
-  }
+.accordion-title:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid currentColor;
+}
 
-  &:hover,
-  &.open {
-    color: black;
-  }
-
-  &.open {
-    &::after {
-      content: "";
-      border-top: 0;
-      border-bottom: 5px solid;
-    }
-  }
+accordion-title:hover,
+.open {
+  color: black;
 }
 
 .accordion-content {
