--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ p {
 }
 
 .listade-ledamöter {
-  padding: 0 20px;
+  padding: 40px 20px;
   background-color: #F2EBDF;
   color: black;
 }
@@ -205,7 +205,7 @@ a:hover {
 .footer-text {
   display: flex;
   flex-direction: column;
-  font-size: 14px;
+  font-size: 12px;
   margin: 0 15px;
 }
 
