color-change-priser

--- a/src/index.css
+++ b/src/index.css
@@ -258,7 +258,7 @@ a:hover {
   cursor: pointer;
   color: #666;
   padding: 0.5em 1.5em;
-  border: solid 1px #ccc;
+  border: solid 1px #640101;
   border-radius: 1.5em;
   display: flex;
   justify-content: space-between;
