--- a/src/index.css
+++ b/src/index.css
@@ -101,21 +101,99 @@ a:hover {
   padding-left: 5px;
 }
 
+/* RESPONSIVE - TABLET */
+@media (min-width: 667px) and (max-width: 1024px) {
+
+  .link-text {
+    font-size: 28px;
+  }
+
+  .arrow {
+    width: 40px;
+    margin-left: 15px;
+  }
+
+  .back-text {
+    font-size: 28px;
+    padding-left: 15px;
+  }
+  
+}
+
+/* RESPONSIVE - DESKTOP */
+@media (min-width: 1025px) {
+  .link-text {
+    font-size: 28px;
+  }
+
+  .arrow {
+    width: 45px;
+    margin-left: 15px;
+  }
+
+  .back-text {
+    font-size: 28px;
+    padding-left: 15px;
+  }
+}
+
 /* HEADER */
 
 .logo {
   width: 100%;
+  padding-bottom: 15px;
 }
 
 .header {
-  padding: 20px;
-  margin: 30px 0px 10px 0px;
+  padding: 20px 20px 5px 20px;
+  margin: 20px 0px 5px 0px;
 }
 
 .sub-heading {
-  border-top: 2px solid;
+  border-bottom: 2px solid;
   text-align: center;
   font-size: 18px;
+  margin-bottom: 40px;
+}
+
+/* RESPONSIVE - TABLET */
+@media (min-width: 667px) and (max-width: 1024px) {
+
+  .header {
+    width: 60%;
+    margin: 10;
+    padding-bottom: 20px;
+    justify-content: center;
+  }
+  
+  .logo {
+    width: 100%;
+    padding-bottom: 15px;
+  }
+  
+  .sub-heading {
+    margin-bottom: 15px;
+  }
+}
+
+/* RESPONSIVE - DESKTOP*/
+@media (min-width: 1025px) {
+
+  .header {
+    width: 40%;
+    margin: 5;
+    padding-bottom: 50px;
+    justify-content: center;
+  }
+  
+  .logo {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+  
+  .sub-heading {
+    margin-bottom: 15px;
+  }
 }
 
 /* FOOTER */
@@ -142,13 +220,50 @@ a:hover {
 
 .footer-logo {
   object-fit: fill; 
-  width: 20%;
-  margin: 30px 15px 25px 15px;
+  width: 15%;
+  margin: 60px 15px 25px 15px;
+}
+
+/* RESPONSIVE - TABLET */
+@media (min-width: 667px) and (max-width: 1024px) {
+  .footer-heading {
+    font-size: 56px;
+  }
+  
+  .logo-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    padding: 15px;
+  }
+  
+  .footer-logo {
+    width: 25%;
+    margin: 40px 15px 25px 15px;
+  }
+}
+
+/* RESPONSIVE - DESKTOP*/
+@media (min-width: 1025px) {
+  .footer-heading {
+    font-size: 56px;
+    margin-bottom: 0;
+  }
+  
+  .logo-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
+    margin: 5px;
+  }
 }
 
 /* PAGES */
 
 /* Startsida */
+
 .uppdrag {
   padding: 20px;
   background-color: #640101;
@@ -157,11 +272,6 @@ a:hover {
 
 .pristagare {
   padding: 20px;
-}
-
-.priser {
-  padding: 20px;
-  background-color: #f2ebdf;
 }
 
 .ledamoter {
@@ -187,30 +297,96 @@ a:hover {
 /* RESPONSIVE - TABLET */
 @media (min-width: 667px) and (max-width: 1024px) {
   
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .start-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  .uppdrag {
+    width: 50%;
+  }
+  
+  p {
+    font-size: 20px;
+  }
+  
+  .footer-text {
+    font-size: 16px;
+    padding: 30px;
+  }
+  
+  .pristagare {
+    width: 50%;
+  }
+  
+  .ledamoter {
+    padding: 20px;
+    width: 50%;
+  }
+  
+  .bild-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .ledamoter-bild {
+    width: 100%;
+  }
+  
+  .letter-box-B {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 50%;
+    background-color: #640101;
+    padding: 40px;
+  }
+  
+  .letter-box-O {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    background-color: #ffff;
+    padding: 40px;
+  }
+
+  .letter {
+    padding: 10px;
+    width: 80%;
+    height: 80%;
+  }
+  
+  .letter-box-A {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 50%;
+    background-color: #640101;
+    padding: 20px;
+  }
+  
+  .letter-A {
+    padding: 10px;
+    width: 80%;
+    height: 60%;
+  }
+  
 }
 
 /* RESPONSIVE - DESKTOP Startsida*/
 @media (min-width: 1025px) {
 
-.header {
-  width: 40%;
-  margin: 0;
-  padding-bottom: 50px;
-  justify-content: center;
-}
-
-.logo {
-  width: 100%;
-}
-
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.sub-heading {
-  margin: 0;
 }
 
 .start-container {
@@ -220,7 +396,6 @@ main {
 
 .uppdrag {
   width: 50%;
-
 }
 
 p {
@@ -268,6 +443,7 @@ p {
 
 .letter-box-A {
   display: flex;
+  align-items: center;
   justify-content: flex-end;
   width: 50%;
   background-color: #640101;
@@ -279,16 +455,10 @@ p {
   width: 50%;
 }
 
-.footer-heading {
-  font-size: 56px;
-}
-
-.logo-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 30%;
-  padding: 15px;
+.letter-A {
+  padding: 10px;
+  width: 50%;
+  height: 40%;
 }
 
 }
@@ -307,7 +477,7 @@ p {
 }
 
 .historia {
-  padding: 20px;
+  padding: 20px 20px 40px 20px;
   background-color: #F2EBDF;
   color: black;
 }
@@ -322,11 +492,11 @@ p {
   padding: 20px;
   background-color: #640101;
   color: #FFFFFF;
-  height: 500px;
+  height: 530px;
 }
 
 .listade-ledamöter {
-  padding: 40px 20px;
+  padding: 40px 20px 80px 20px;
   background-color: #F2EBDF;
   color: black;
 }
@@ -396,7 +566,12 @@ p {
   padding: 20px;
   background-color: #640101;
   color: #FFFFFF;
-  height: 400px;
+  height: 430px;
+}
+
+.priser {
+  padding: 40px 40px 80px 40px;
+  background-color: #f2ebdf;
 }
 
 /* ACCORDION */
