--- a/src/index.css
+++ b/src/index.css
@@ -428,7 +428,7 @@ a:hover {
     justify-content: center;
     width: 50%;
     background-color: #640101;
-    padding: 40px;
+    padding: 80px 40px;
   }
 
   .letter-box-O {
